# grpc-web-rust-demo

nextjs-getting/: generate-proto.sh  package.json  pnpm-lock.yaml  tsconfig.json
nextjs-getting/proto/getting/v1/: auth.proto  user.proto
nextjs-getting/src/actions/: sign.ts
nextjs-getting/src/app/: globals.css
nextjs-getting/src/app/profile/: page.tsx
nextjs-getting/src/lib/: grpc-web.ts  grpc.ts  test.test.ts
nextjs-getting/src/pb/getting/v1/: auth.ts  basic.ts  page.ts  user.ts
pxfront/src/proto/getting/: basic_pb.ts
pxfront/src/proto/getting/common/: page_pb.ts
pxfront/src/proto/getting/v1/: auth_pb.ts  user_pb.ts
tonic-getting/: Cargo.toml  buf.gen.yaml  buf.yaml  build_.rs
tonic-getting/examples/: client-interceptor.rs
tonic-getting/go/proto/getting/: basic.pb.go
tonic-getting/go/proto/getting/common/: page.pb.go
tonic-getting/go/proto/getting/v1/: auth.pb.go  basic.pb.go  page.pb.go  user.pb.go
tonic-getting/go/proto/getting/v1/gettingv1connect/: auth.connect.go  user.connect.go
tonic-getting/proto/getting/v1/: basic.proto  page.proto  user.proto
tonic-getting/src/: lib.rs  main.rs
tonic-getting/src/api/: getting.v1.rs  getting.v1.serde.rs  getting.v1.tonic.rs  mod.rs  proto.getting.v1.rs  proto.getting.v1.serde.rs  proto.getting.v1.tonic.rs
tonic-getting/src/grpc/: auth.rs  mod.rs  user.rs
