[package]
name = "tonic-getting"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
# tracing = "0.1"
tracing-subscriber = "0.3"

tonic = "0.12"
tonic-web = "0.12"
prost = "0.13"
pbjson = "0.7"
pbjson-types = "0.7"
serde = { version = "1", features = ["derive"] }
serde_derive = "1.0.219"
http = "1.1.0"
tower-http = { version = "0.6.2", features = ["cors"] }





[build-dependencies]
tonic-build = "0.12"
